--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - checkout
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-#     Uncomment the following run block, if permissions for gradlew fail on CircleCI:
+##    Uncomment the following run block, if permissions for gradlew fail on CircleCI:
 #      - run:
 #         name: Chmod permissions
 #         command: sudo chmod +x ./gradlew
